2002-07-02  Danny Smith <dannysmith@users.sourceforge.net>

	* include/commctrl.h (WC_*): Remove some duplicate defines.

2002-07-02  Ken Fitlike  <kenfitlike@hotmail.com>

	* include/commctrl.h (WC_IPADDRESS[AW]): Add defines and
	UNICODE mappings.
	(IPM*): Add defines.
	(IPN_*): Add defines.
	(NMIPADDRESS): Add structure and typedefs.
	(MAKEIPADDRESS): Add macro.
	(MAKEIPRANGE): Add macro.
	(FIRST_IPADDRESS): Add macro.
	(SECOND_IPADDRESS): Add macro.
	(THIRD_IPADDRESS): Add macro.
	(FOURTH_IPADDRESS): Add macro.

2002-06-25  Conrad Scott  <conrad.scott@dsl.pipex.com>

	* include/winbase.h (FILE_FLAG_FIRST_PIPE_INSTANCE): Add constant.

2002-06-26  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* include/winbase.h (WINBASEAPI): Don't define if prior
	definition.

	* include/winioctl.h (PARTITION_FAT32, PARTITION_FAT32_XINT13,
	PARTITION_XINT13, PARTITION_XINT13_EXTENDED, PARTITION_LDM,
	PARTITION_UNIX): Add defines.
	(PDRIVE_LAYOUT_INFORMATION): Add typedef.
	(IsRecognizedPartition): Also check for PARTITION_FAT32,
	PARTITION_FAT32_XINT13 and PARTITION_XINT13.
	(IsContainerPartition): Add macro.

2002-06-25  Ken Fitlike  <kenfitlike@hotmail.com>

	* include/commctrl.h: (CBEIF_*): Add defines.
	(CBEN_*): Add defines and UNICODE mappings
	(WC_COMBOBOXEX[AW]): Add defines and UNICODE mappings.
	(CBEMAXSTRLEN): Add define.
	(COMBOBOXEXITEM[AW]): Add structures and typedefs.
	(NMCOMBOBOXEX[AW]): Add structures and typedefs.
	(NMCBEDRAGBEGIN[AW]): Add structure and typedefs.
	(NMCBEENDEDIT[AW]): Add structure and typedefs.

2002-06-24  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/objidl.h (struct tagPROPVARIANT): Kill obsolete
	union member _VARIANT_BOOL bool.
	
2002-06-24  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winioctl.h (FILE_SPECIAL_ACCESS): Add define.

2002-06-24  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* include/winnt.h (PCCHAR, FCHAR, FSHORT, FLONG,
	PLUID_AND_ATTRIBUTES,PSECURITY_IMPERSONATION_LEVEL,