@@ -1,12 +1,13 @@
+#ifndef RPC_NO_WINDOWS_H
+#include <windows.h>
+#endif
+
 #ifndef _RPC_H
 #define _RPC_H
 #if __GNUC__ >=3
 #pragma GCC system_header
 #endif
 
-#ifndef RPC_NO_WINDOWS_H
-#include <windows.h>
-#endif
 #ifdef __cplusplus
 extern "C" {
 #endif
